# SDL-mirror

./: find-dylib-name.py  meson.build  meson_options.txt
include/: SDL_config.h.meson  SDL_hints.h
src/: meson.build
src/audio/: meson.build
src/audio/emscripten/: SDL_emscriptenaudio.c
src/core/: meson.build
src/core/linux/: meson.build
src/core/windows/: meson.build
src/events/: SDL_mouse.c  meson.build
src/filesystem/: meson.build
src/joystick/: meson.build
src/joystick/haiku/: meson.build
src/joystick/iphoneos/: meson.build
src/joystick/windows/: meson.build
src/loadso/: meson.build
src/power/: meson.build
src/render/: meson.build
src/render/software/: meson.build
src/sensor/: meson.build
src/stdlib/: meson.build
src/thread/: meson.build
src/thread/windows/: meson.build
src/timer/: meson.build
src/video/: SDL_egl.c  meson.build
src/video/cocoa/: meson.build
src/video/emscripten/: SDL_emscriptenevents.c  SDL_emscriptenframebuffer.c  SDL_emscriptenopengles.c
src/video/mir/: meson.build
src/video/wayland/: meson.build
src/video/x11/: meson.build
test/: Makefile.in
wayland-protocols/: meson.build
