c_sources += files(
    'SDL_audio.c',
    'SDL_audiocvt.c',
    'SDL_audiodev.c',
    'SDL_audiotypecvt.c',
    'SDL_mixer.c',
    'SDL_wave.c',
)

subdir('alsa')
subdir('android')
subdir('arts')
subdir('coreaudio')
subdir('directsound')
subdir('disk')
subdir('dsp')
subdir('dummy')
subdir('emscripten')
subdir('esd')
subdir('fusionsound')
subdir('haiku')
subdir('jack')
subdir('nacl')
subdir('nas')
subdir('netbsd')
subdir('paudio')
subdir('psp')
subdir('pulseaudio')
subdir('qsa')
subdir('sndio')
subdir('sun')
subdir('wasapi')
subdir('winmm')
